--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "koa server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
     "@koa/cors": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/inflection": "^1.5.28",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/koa": "^2.11.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
@@ -22,12 +23,15 @@
     "@types/koa__cors": "^2.2.3",
     "@types/mongoose": "^5.5.32",
     "bcrypt": "^3.0.6",
+    "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.7.13"
-  }
+  },
+  "repository": "git@github.com:OneVicetone/server.git"
 }
